# chart-extract

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROGRESS.md  README.md  demo.py  docker-compose.yml
.github/workflows/: ci.yml  live.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/chartextract_api/: __init__.py  app.py  cli.py  deps.py  errors.py  routes.py  schemas.py  simulate.py
api/tests/: conftest.py  test_errors.py  test_eval.py  test_extract.py  test_health.py  test_live_api.py  test_misc.py  test_samples.py  test_security.py  test_simulate.py  test_static.py  test_upload.py
app/: ChartExtract-UIUX-Spec.md  ChartExtract.dc.html  api.js  map.js  package-lock.json  package.json  playwright.config.ts
app/tests/: _component.js  _gen_fixtures.py  api.test.js  component.test.js  edge.test.js  map.test.js  run-e2e.mjs
app/tests/a11y/: axe.spec.ts  keyboard.spec.ts  reduced-motion.spec.ts  screen-reader.spec.ts
app/tests/e2e/: helpers.ts  interactions.spec.ts  money-demo.spec.ts
app/tests/edge/: edge-states.spec.ts
app/tests/fixtures/: eval.json  extract_intake.json  extract_path.json  extract_path_caught.json  samples.json
app/tests/responsive/: layout.spec.ts
app/tests/screenshots/: shots.spec.ts
core/: pyproject.toml
core/src/chartextract/: __init__.py  batch.py  cli.py  confidence.py  cost.py  grounding.py  load.py  pipeline.py  prompts.py  router.py  schemas.py
core/src/chartextract/provider/: __init__.py  base.py  openai.py  stub.py
core/tests/: conftest.py  test_batch.py  test_caching.py  test_cli.py  test_confidence.py  test_cost.py  test_flags.py  test_grounding.py  test_listfield.py  test_load.py  test_openai_live.py  test_openai_provider.py  test_pipeline.py  test_prompts.py  test_provider_errors.py  test_provider_selection.py  test_router.py  test_schema.py  test_stub_provider.py  test_worked_example.py
docs/: architecture.md
docs/eval/: leaderboard-20260627.jsonl  leaderboard-20260627.txt
eval/: __init__.py  dataset.py  normalize.py  pyproject.toml  run.py
eval/gold/: README.md  discharge_00_pneumonia.json  discharge_01_cholecystitis.json  intake_00_form.json  intake_01_male.json  intake_02_migraine.json  intake_03_polypharmacy.json  intake_04_minimal.json  path_00_worked_example.json  path_01_idc_grade3.json  path_02_lobular.json  path_03_dcis.json  path_04_mucinous.json  path_05_tubular.json  path_06_metaplastic.json  path_07_idc_equivocal.json  path_08_papillary.json  path_09_sparse.json
eval/gold/docs/: discharge_00_pneumonia.txt  discharge_01_cholecystitis.txt  intake_01_male.txt  intake_02_migraine.txt  intake_03_polypharmacy.txt  intake_04_minimal.txt  path_00_worked_example.txt  path_01_idc_grade3.txt  path_02_lobular.txt  path_03_dcis.txt  path_04_mucinous.txt  path_05_tubular.txt  path_06_metaplastic.txt  path_07_idc_equivocal.txt  path_08_papillary.txt  path_09_sparse.txt
eval/tests/: conftest.py  test_batch_eval.py  test_dataset.py  test_gold.py  test_normalize.py  test_run.py  test_run_api.py
examples/: intake_form.txt
scripts/: check_phi.py
tests/: test_demo.py  test_orchestration.py  test_packaging.py  test_phi_guard.py
