[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chartextract-api"
version = "0.1.0"
description = "ChartExtract HTTP API — a thin FastAPI adapter exposing the chartextract engine over HTTP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
# Depends on the installed `chartextract` engine (editable: `pip install -e core/`). It NEVER
# duplicates engine logic (grounding/flags/scoring all stay in core) — FastAPI is just the HTTP
# surface that imports `core` (and optionally `eval`) and serializes their results.
dependencies = [
    "chartextract",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2",
]

[project.optional-dependencies]
# The /api/eval endpoint reads the frozen leaderboard artifact (or runs the harness on the stub),
# which lives in the `chartextract-eval` package. Optional so the core API runs without it.
eval = [
    "chartextract-eval",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
]

[project.scripts]
chartextract-api = "chartextract_api.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["chartextract_api"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom requires `Depends(...)` in argument defaults (B008).
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.isort]
known-first-party = ["chartextract_api", "chartextract"]
