[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chartextract"
version = "0.1.0"
description = "ChartExtract — a grounded, eval-proven clinical-document field-extraction engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shamim Ahamed" }]
dependencies = [
    "pydantic>=2",
    "pypdf>=4",
]

[project.optional-dependencies]
# The Anthropic SDK is introduced in Split 04; declared here so the dependency set is
# honest and `pip install -e core/[providers]` works ahead of time.
providers = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
chartextract = "chartextract.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["chartextract"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["chartextract"]
