[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chartextract"
version = "0.1.0"
description = "ChartExtract — a grounded, eval-proven clinical-document field-extraction engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Shamim Ahamed" }]
keywords = ["clinical", "extraction", "grounding", "llm", "pydantic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2",
    "pypdf>=4",
]

[project.optional-dependencies]
# Live provider SDKs (Split 04). The realized live backend is Azure OpenAI GPT-5.5
# (`provider/openai.py`); the Anthropic SDK is kept as the spec's reference provider.
# `pip install -e core/[providers]` pulls both so the seam is honest either way.
providers = [
    "openai>=1.40",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[project.scripts]
chartextract = "chartextract.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["chartextract"]

[tool.coverage.report]
# The repo-wide production-ready gate (Split 12). `pytest --cov` fails under this threshold.
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle (E/W), pyflakes (F), isort (I), pyupgrade (UP), bugbear (B).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["chartextract"]
