[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chartextract-eval"
version = "0.1.0"
description = "ChartExtract field-level eval harness — frozen gold set, normalizers, and the leaderboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Shamim Ahamed" }]
keywords = ["eval", "leaderboard", "extraction", "chartextract"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
# Depends on the installed `chartextract` engine (editable: `pip install -e core/`) — it never
# duplicates engine logic, it drives `chartextract.extract` over the gold set and scores the result.
dependencies = [
    "chartextract",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.setuptools]
# The eval package is the top-level `eval/` directory itself (this file lives inside it), so there
# is no src/ layout to discover; the gold data and tests are not part of the distribution.
packages = ["eval"]
package-dir = { "eval" = "." }

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path (relative to this rootdir) so `import eval.normalize` resolves
# whether pytest is invoked from the repo root or from eval/. tests/conftest.py reinforces this.
pythonpath = [".."]
markers = [
    "api: end-to-end tests that call a real provider API (need a key; auto-skipped otherwise)",
]

[tool.coverage.run]
branch = true
source = ["eval"]
omit = ["tests/*"]

[tool.coverage.report]
# The repo-wide production-ready gate (Split 12). `pytest --cov` fails under this threshold.
fail_under = 85

[tool.ruff]
line-length = 100
target-version = "py311"
src = [".", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["eval", "chartextract"]
